[gd_scene load_steps=8 format=3 uid="uid://ceafcuo2kew1o"]

[ext_resource type="Texture2D" uid="uid://xd4kvx15tjyr" path="res://icon.svg" id="1_5ywo3"]
[ext_resource type="Script" path="res://ammo_bonus_1.gd" id="1_iqdor"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lxfpc"]
radius = 9.0

[sub_resource type="Animation" id="Animation_5r4ol"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_pq7jw"]
resource_name = "dissappear"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, true, false, true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_41812"]
_data = {
"RESET": SubResource("Animation_5r4ol"),
"dissappear": SubResource("Animation_pq7jw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42sug"]
size = Vector2(21, 21)

[node name="RigidBody2D" type="RigidBody2D"]
collision_layer = 2147483648
collision_mask = 8388608
script = ExtResource("1_iqdor")

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(10.5, 10.5)
scale = Vector2(0.164062, 0.164062)
texture = ExtResource("1_5ywo3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10.5, 10.5)
shape = SubResource("CircleShape2D_lxfpc")

[node name="Pick_Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_41812")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(10.5, 10.5)
shape = SubResource("RectangleShape2D_42sug")

[connection signal="timeout" from="Pick_Timer" to="." method="_on_pick_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
